# privgold-pandora

./: .gitignore  README.md  all.sh  app-release-1.03  build.sh  src
vegastrike/: CMakeLists.txt  FindFFMPEG.cmake  FindGTK2.cmake  Makefile.am  Makefile.in  Resources.rc  cmake-config.h.in  config.h.in  configure.ac
vegastrike/boost/1_35/boost/: dynamic_bitset.hpp  dynamic_bitset_fwd.hpp
vegastrike/boost/1_50/: CMakeLists.txt
vegastrike/cmake/: FindFFMPEG.cmake  FindGTK2.cmake  FindVorbis.cmake  GetSCMrevision.cmake  config.h.in  vs_utils.cmake
vegastrike/cmake-scripts/: FindFFMPEG.cmake  FindPNG.cmake  GetSCMrevision.cmake
vegastrike/launcher/: CMakeLists.txt  general.cpp  general.h  launcher.h  launcher.rc  main.cpp  nogui.cpp  saveinterface.cpp
vegastrike/m4scripts/: VS_CHECK_GL.m4  VS_CHECK_OPENAL.m4  VS_CHECK_PYTHON.m4  VS_CHECK_SDL.m4  VS_CHECK_VORBIS.m4  VS_CONFIG_GTKUTILS.m4  VS_WITH_BOOST.m4  VS_WITH_FFMPEG.m4
vegastrike/objconv/: CMakeLists.txt  asteroidgen.cpp
vegastrike/objconv/basemaker/: base_maker.cpp  base_maker_texture.cpp
vegastrike/objconv/mesher/: Converter.h  from_obj.cpp
vegastrike/setup/: CMakeLists.txt  vega.rc
vegastrike/setup/src/c/: setup.cpp
vegastrike/setup/src/include/: central.cpp  central.h  display.h  display_dialog.cpp  display_gtk.cpp  file.cpp  general.cpp  general.h
vegastrike/src/: SharedPool.cpp  SharedPool.h  Singleton.h  VSFileXMLSerializer.cpp  XMLDocument.cpp  XMLDocument.h  accountserver.cpp  buildlin64.sh  command.cpp  command.h  config_xml.cpp  config_xml.h  configxml.cpp  configxml.h  debug_vs.cpp  debug_vs.h  easydom.cpp  easydom.h  faction_generic.cpp  faction_generic.h  faction_util.cpp  faction_util_generic.cpp  ffmpeg_init.cpp  ffmpeg_init.h  force_feedback.cpp  functors.h  galaxy.cpp  galaxy_gen.cpp  galaxy_gen.h  galaxy_xml.cpp  galaxy_xml.h  gamemenu.cpp  gamemenu.h  gfxlib.h  gfxlib_struct.cpp  gfxlib_struct.h  gfxlib_struct_server.cpp  gnuhash.h  hashtable.h  in.h  (+65 more)
vegastrike/src/aldrv/: al_init.cpp  al_sound.cpp
vegastrike/src/audio/: Exceptions.h  Listener.cpp  TemplateManager.cpp
vegastrike/src/audio/codecs/: FFStream.cpp
vegastrike/src/cmd/: asteroid_generic.cpp  atmosphere.cpp  base.h  base_init.cpp  base_interface.cpp  base_util.cpp  base_util.h  base_util_server.cpp  base_xml.cpp  basecomputer.cpp  basecomputer.h  beam.h  beam_generic.cpp  bolt.cpp  bolt.h  bolt_generic.cpp  bolt_server.cpp  briefing.h  building_generic.cpp  click_list.cpp  collection.h  collide_map.cpp  cont_terrain.cpp  csv.cpp  csv.h  enhancement_generic.h  faction_xml.cpp  images.h  missile_generic.h  mount.cpp  music.cpp  music.h  nebula_generic.cpp  nebula_generic.h  oldcollection.cpp  oldcollection.h  pilot.cpp  planet.cpp  planet_generic.cpp  planet_generic.h  (+34 more)
vegastrike/src/cmd/ai/: aggressive.cpp  comm_ai.cpp  communication.cpp  communication.h  communication_xml.cpp  docking.cpp  event_xml.cpp  fire.cpp  fire.h  firekeyboard.cpp  flybywire.cpp  flykeyboard.cpp  hard_coded_scripts.cpp  ikarus.h  input_dfa.cpp  missionscript.cpp  missionscript.h  navigation.h  order.cpp  order.h  pythonai.cpp  script.cpp  script.h
vegastrike/src/cmd/collide2/: opcodetypes.h
vegastrike/src/cmd/script/: director.cpp  director_generic.cpp  director_server.cpp  mission.cpp  mission.h  mission_script.cpp  msgcenter.cpp  msgcenter.h  pythonmission.cpp  pythonmission.h  script_call_briefing.cpp  script_call_olist.cpp  script_call_omap.cpp  script_call_order.cpp  script_call_string.cpp  script_call_unit_generic.cpp  script_callbacks.cpp  script_expression.cpp  script_generic.cpp  script_statement.cpp  script_util.cpp  script_variables.cpp
vegastrike/src/common/: common.cpp  common.h
vegastrike/src/gfx/: ani_texture.cpp  ani_texture.h  aux_logo.cpp  aux_logo.h  aux_texture.cpp  aux_texture.h  background.cpp  background.h  background_server.cpp  cockpit.cpp  cockpit.h  cockpit_generic.cpp  cockpit_generic.h  cockpit_xml.cpp  env_map_gent.cpp  halo.cpp  halo_system.cpp  halo_system.h  hud.cpp  hud.h  jpeg_memory.cpp  jpeg_memory.h  loc_select.cpp  mesh.cpp  mesh.h  mesh_bxm.cpp  mesh_bxm.h  mesh_fx.cpp  mesh_gfx.cpp  mesh_poly.cpp  mesh_server.cpp  mesh_xml.cpp  mesh_xml.h  nonlinear_transform.h  quadsquare.cpp  quadsquare_update.cpp  quadtree_xml.cpp  ring.cpp  sphere_generic.cpp  sprite.cpp  (+13 more)
vegastrike/src/gfx/nav/: criteria.cpp  criteria.h  drawgalaxy.cpp  drawlist.cpp  drawlist.h  drawsystem.cpp  navcomputer.cpp  navcomputer.h  navgetxmldata.cpp  navgetxmldata.h  navitemstodraw.h  navparse.h  navscreen.cpp  navscreen.h
vegastrike/src/gldrv/: gl_globals.h  gl_init.cpp  gl_light.cpp  gl_light.h  gl_light_pick.cpp  gl_light_state.cpp  gl_material.cpp  gl_sphere_list.cpp  gl_sphere_list_server.cpp  gl_state.cpp  gl_texture.cpp  gl_vertex_list.cpp  hashtable_3d.h  vs_lib_defs_gl.h  vs_lib_gl.c  vs_lib_syms_gl.h  winsys.cpp  winsys.h
vegastrike/src/gui/: eventmanager.cpp  font.cpp  font.h  general.cpp  general.h  glut_support.cpp  glut_support.h  modaldialog.cpp  modaldialog.h  newbutton.h  painttext.cpp  painttext.h  picker.cpp  scroller.cpp  simplepicker.h  staticdisplay.h  text_area.cpp  text_area.h  textinputdisplay.cpp  textinputdisplay.h  window.cpp
vegastrike/src/mission/include/: central.cpp  (+7 more)
vegastrike/src/networking/: accountsxml.cpp  accountsxml.h  client.h  const.h  fileutil.cpp  fileutil.h  inet.cpp  netclient.cpp  netclient.h  netclient_clients.cpp  netclient_devices.cpp  netclient_login.cpp  netserver.cpp  netserver.h  netserver_acct.cpp  netserver_clients.cpp  netserver_devices.cpp  netserver_login.cpp  networkcomm.cpp  networkcomm.h  networkcomm_server.cpp  respawning_soundserver.cpp  savenet_util.cpp  savenet_util.h  softvolume.cpp  soundserver.cpp  soundserver.mac.cpp  soundserver.mac.notworking.cpp  soundserver.segfault.cpp  zonemgr.cpp  zonemgr.h
vegastrike/src/python/: briefing_wrapper.cpp  init.cpp  init.h  python_class.h  python_compile.cpp  star_system_exports.h  unit_wrapper.cpp  unit_wrapper_class.h
vegastrike/tests/: CMakeLists.txt  test.cpp
vegastrike/tools/: CMakeLists.txt  unicode-conv.cpp
(+285 files in other folders)
